version/0.19/_sources/api/solver/_autosummary/settings/modify_zones.rst.txt
:orphan:

.. _modify_zones:

modify_zones
============

.. autoclass:: ansys.fluent.core.solver.settings_241.modify_zones.modify_zones
    :show-inheritance:

.. rubric:: Methods

============================================================   ==============================================================================================================================================

Method                                                                                                                                                                                                Summary

============================================================   ==============================================================================================================================================
:ref:`deactivate_cell_zone <deactivate_cell_zone>`                                                                                                                                    Deactivate cell thread.

:ref:`delete_cell_zone <delete_cell_zone>`                                                                                                                                              Delete a cell thread.

:ref:`copy_move_cell_zone <copy_move_cell_zone>`                                                                                                                    Copy and translate or rotate a cell zone.

:ref:`list_zones <list_zones>`                                                                                                                                        List zone IDs, types, kinds, and names.

:ref:`extrude_face_zone_delta <extrude_face_zone_delta>`                                                                                Extrude a face thread a specified distance based on a list of deltas.

:ref:`extrude_face_zone_para <extrude_face_zone_para>`             Extrude a face thread a specified distance based on a distance and a list of parametric locations between 0 and 1 (eg. 0 0.2 0.4 0.8 1.0).

:ref:`fuse_face_zones <fuse_face_zones>`                                                                                                         Attempt to fuse zones by removing duplicate faces and nodes.

:ref:`scale_zone <scale_zone>`                                                                                                                                   Scale nodal coordinates of input cell zones.

:ref:`rotate_zone <rotate_zone>`                                                                                                                                Rotate nodal coordinates of input cell zones.

:ref:`translate_zone <translate_zone>`                                                                                                                       Translate nodal coordinates of input cell zones.

:ref:`merge_zones <merge_zones>`                                                                                                                         Merge zones of the same type and condition into one.

:ref:`replace_zone <replace_zone>`                                                                                                                                                       Replace a cell zone.

:ref:`append_mesh <append_mesh>`                                                                                                                                                             Append new mesh.

:ref:`append_mesh_data <append_mesh_data>`                                                                                                                                         Append new mesh with data.

:ref:`sep_cell_zone_mark <sep_cell_zone_mark>`                                                                                                                    Separate a cell zone based on cell marking.

:ref:`sep_cell_zone_region <sep_cell_zone_region>`                                                                                                          Separate a cell zone based on contiguous regions.

:ref:`sep_face_zone_angle <sep_face_zone_angle>`                                                                                                             Separate a face zone based on significant angle.

:ref:`sep_face_zone_face <sep_face_zone_face>`                                                                                                                 Separate each face in a zone into unique zone.

:ref:`sep_face_zone_mark <sep_face_zone_mark>`                                                                                                                    Separate a face zone based on cell marking.

:ref:`sep_face_zone_region <sep_face_zone_region>`                                                                                                          Separate a face zone based on contiguous regions.

:ref:`zone_name <zone_name_2>`                                                                                                                                                        Give a zone a new name.

:ref:`change_zone_state <change_zone_state>`                                                                                                                    Change the realgas material state for a zone.

:ref:`make_periodic <make_periodic>`                                                                                                          Attempt to establish conformal periodic face zone connectivity.

:ref:`create_periodic_interface <create_periodic_interface>`                                                                                          Create a conformal or non-conformal periodic interface.

:ref:`slit_periodic <slit_periodic_1>`                                                                                                                          Slit a periodic zone into two symmetry zones.

:ref:`zone_type <zone_type>`                                                                                                                                                               Set a zone's type.

============================================================   ==============================================================================================================================================

.. rubric:: Included in:

==================   =================

Parent                         Summary

==================   =================
:ref:`mesh <mesh>`       'mesh' child.

==================   =================

